--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=smart-parking-api
+
+spring.datasource.url=jdbc:mysql://localhost:3306/smart_parking
+spring.datasource.username=root
+spring.datasource.password=Java25oop@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
